--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+body{
+    background-image: url(/PortafolioFrontEnd1/img/chalten.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+
 .navbar.navbar-expand-lg.bg-dark{
     background-color:blueviolet !important;
 }
@@ -5,7 +11,37 @@
 i.fa-brands.fa-instagram.fa-2x1:hover{
     color:blue;
 }
+i.fa-brands.fa-linkedin.fa-2x1:hover{
+    color:blue;
+}
+i.fa-brands.fa-facebook.fa-2x1:hover{
+    color:blue;
+}
+i.fa-brands.fa-twitter.fa-2x1:hover{
+    color:blue;
+}
+i.fa-brands.fa-github.fa-2x1:hover{
+    color:blue;
+}
+i.fa-solid.fa-user.fa-2x1:hover{
+    color:blue;
+}
+i.fa-solid.fa-user-lock.fa-2x1:hover{
+    color:blue;
+}
 .list-group {
     --bs-list-group-bg: transparent;  
     --bs-list-group-border-color: none;
+} 
+
+section.about, section.dashboard{
+    margin-top: 10rem;
+}
+section.about{
+    margin-top: 10rem;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    color: #fff;
+
+
 }
